force-app/main/default/objects/Lead/fields/Additional_Investment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Investment__c</fullName>
    <label>Additional Investment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; $1000</fullName>
            </value>
            <value>
                <fullName>$1,000 - $10,000</fullName>
            </value>
            <value>
                <fullName>$10,000 - $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 - $100,000</fullName>
            </value>
            <value>
                <fullName>&gt; $100,000</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>