force-app/main/default/objects/Lead/fields/Alcohol_tobacco_or_firearms__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_tobacco_or_firearms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alcohol, tobacco, or firearms</label>
    <type>Checkbox</type>
</CustomField>