force-app/main/default/objects/Lead/fields/Alternate_Business_Names__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Business_Names__c</fullName>
    <label>Alternate Business Names</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>