force-app/main/default/objects/Lead/fields/Applied_for_EIN_before__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_EIN_before__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied for EIN before</label>
    <type>Checkbox</type>
</CustomField>