force-app/main/default/objects/Lead/fields/Applied_for_Loan_Forgiveness__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Loan_Forgiveness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applied for Loan Forgiveness</description>
    <inlineHelpText>Applied for Loan Forgiveness</inlineHelpText>
    <label>Applied for Loan Forgiveness</label>
    <type>Checkbox</type>
</CustomField>