force-app/main/default/objects/Lead/fields/Approximate_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Monthly_Revenue__c</fullName>
    <label>Approximate Monthly Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-1,000</fullName>
            </value>
            <value>
                <fullName>1,000-5,000</fullName>
            </value>
            <value>
                <fullName>5,000-10,000</fullName>
            </value>
            <value>
                <fullName>10,000&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>