force-app/main/default/objects/Lead/fields/Areas_needing_help__c.field-meta.xml
<CustomField>
    <fullName>Areas_needing_help__c</fullName>
    <label>Areas needing help</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting Services</fullName>
            </value>
            <value>
                <fullName>Back Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Business CPA</fullName>
            </value>
            <value>
                <fullName>Business Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Personal Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Start a Business</fullName>
            </value>
            <value>
                <fullName>Tax Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>