force-app/main/default/objects/Lead/fields/Attended_Merchant_Sales_1_1__c.field-meta.xml
<CustomField>
    <fullName>Attended_Merchant_Sales_1_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Merchant Sales 1-1</label>
    <type>Checkbox</type>
</CustomField>