force-app/main/default/objects/Lead/fields/Bark_Questions__c.field-meta.xml
<CustomField>
    <fullName>Bark_Questions__c</fullName>
    <label>Lead Source Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>