force-app/main/default/objects/Lead/fields/BK_Stage__c.field-meta.xml
<CustomField>
    <fullName>BK_Stage__c</fullName>
    <label>BK Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introduction / Initial Connection</fullName>
            </value>
            <value>
                <fullName>Bank Account Connection</fullName>
            </value>
            <value>
                <fullName>Chart of Accounts Review</fullName>
            </value>
            <value>
                <fullName>Full--Service BK Pitch</fullName>
            </value>
            <value>
                <fullName>FOP On File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>