force-app/main/default/objects/Lead/fields/BK_Status__c.field-meta.xml
<CustomField>
    <fullName>BK_Status__c</fullName>
    <label>BK Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attempted</fullName>
                <isActive>false</isActive>
                <label>Attempted</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
                <isActive>false</isActive>
                <label>Contacted</label>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>