force-app/main/default/objects/Lead/fields/Bookkeeping_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bookkeeping Scheduled</label>
    <type>Checkbox</type>
</CustomField>