force-app/main/default/objects/Lead/fields/Brooke_Test__c.field-meta.xml
<CustomField>
    <fullName>Brooke_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to track unassigned appointments scheduled through emails</description>
    <label>Brooke Test</label>
    <type>Checkbox</type>
</CustomField>