force-app/main/default/objects/Lead/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>Browser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>