force-app/main/default/objects/Lead/fields/Business_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Bank_Account__c</fullName>
    <label>Business Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>