force-app/main/default/objects/Lead/fields/Business_County__c.field-meta.xml
<CustomField>
    <fullName>Business_County__c</fullName>
    <label>Business County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>