force-app/main/default/objects/Lead/fields/Business_Detail__c.field-meta.xml
<CustomField>
    <fullName>Business_Detail__c</fullName>
    <label>Business Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>