force-app/main/default/objects/Lead/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>Field used for Corp offer</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>