force-app/main/default/objects/Lead/fields/Business_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Service_Type__c</fullName>
    <label>Business Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>