force-app/main/default/objects/Lead/fields/Calculated_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Timezone__c</fullName>
    <label>Calculated Timezone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>