force-app/main/default/objects/Lead/fields/Calling_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Calling_Page_URL__c</fullName>
    <description>The page used to initiate the call from the client used with Invoca and other tools</description>
    <label>Calling Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>