force-app/main/default/objects/Lead/fields/Calls__c.field-meta.xml
<CustomField>
    <fullName>Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calls</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>