force-app/main/default/objects/Lead/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>The Campaign for records with a Lead Type New that contains Paid Digital</description>
    <label>Campaign</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1-800Accountant Registration</fullName>
            </value>
            <value>
                <fullName>1800Acct Homepage</fullName>
            </value>
            <value>
                <fullName>Accounting Services</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Back to Business</fullName>
            </value>
            <value>
                <fullName>Blog Join Now</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Services</fullName>
            </value>
            <value>
                <fullName>Business.com</fullName>
            </value>
            <value>
                <fullName>Business Recovery Assistance</fullName>
            </value>
            <value>
                <fullName>Business Tax Prep</fullName>
            </value>
            <value>
                <fullName>Call 1800 BTP</fullName>
            </value>
            <value>
                <fullName>Call Accounting Services</fullName>
            </value>
            <value>
                <fullName>Call Bookkeeping Services</fullName>
            </value>
            <value>
                <fullName>Call Business Recovery Assistance</fullName>
            </value>
            <value>
                <fullName>Call Business Tax Prep</fullName>
            </value>
            <value>
                <fullName>Call ClientBooks</fullName>
            </value>
            <value>
                <fullName>Call Competitor</fullName>
            </value>
            <value>
                <fullName>Call DoubleCheck</fullName>
            </value>
            <value>
                <fullName>Call EIN</fullName>
            </value>
            <value>
                <fullName>Call Entity Formation</fullName>
            </value>
            <value>
                <fullName>Call Get Started</fullName>
            </value>
            <value>
                <fullName>Call In</fullName>
            </value>
            <value>
                <fullName>Call Join Now</fullName>
            </value>
            <value>
                <fullName>Call Payroll</fullName>
            </value>
            <value>
                <fullName>Call Pricing Page</fullName>
            </value>
            <value>
                <fullName>Call Remarketing</fullName>
            </value>
            <value>
                <fullName>Call SMB Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Call Sprout</fullName>
            </value>
            <value>
                <fullName>Call Stimulus Disaster Relief</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>