force-app/main/default/objects/Lead/fields/CAP_Pitched_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CAP_Pitched_Date_Time__c</fullName>
    <description>Records time of CAP pitch</description>
    <label>CAP Pitched Date/Time</label>
    <type>DateTime</type>
</CustomField>