force-app/main/default/objects/Lead/fields/CAP_Rep__c.field-meta.xml
<CustomField>
    <fullName>CAP_Rep__c</fullName>
    <description>Records the name of the Sales Rep that pitched CAP services.</description>
    <label>CAP Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>