force-app/main/default/objects/Lead/fields/CBC_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>CBC_Scheduled__c</fullName>
    <label>CBC Scheduled</label>
    <type>DateTime</type>
</CustomField>