force-app/main/default/objects/Lead/fields/Created_before_2021__c.field-meta.xml
<CustomField>
    <fullName>Created_before_2021__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate whether a lead was created before 2021. Used for segmenting our Einstein Lead Scoring model</description>
    <label>Created before 2021?</label>
    <type>Checkbox</type>
</CustomField>