force-app/main/default/objects/Lead/fields/Created_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Week__c</fullName>
    <formula>(Mod(Floor(today()-datevalue(&quot;2015-01-01&quot;))/7,52)+1)-(MOD(floor( DateValue(CreatedDate) -Datevalue(&quot;2015-01-01&quot;))/7,52)+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>