force-app/main/default/objects/Lead/fields/Date_business_acquired__c.field-meta.xml
<CustomField>
    <fullName>Date_business_acquired__c</fullName>
    <label>Date business acquired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>