force-app/main/default/objects/Lead/fields/Date_Entity_Started_or_Aquired__c.field-meta.xml
<CustomField>
    <fullName>Date_Entity_Started_or_Aquired__c</fullName>
    <label>Date Entity Started or Aquired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>