force-app/main/default/objects/Lead/fields/Date_Sold__c.field-meta.xml
<CustomField>
    <fullName>Date_Sold__c</fullName>
    <label>Date Sold</label>
    <type>DateTime</type>
</CustomField>