force-app/main/default/objects/Lead/fields/Deceased_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Deceased_First_Name__c</fullName>
    <label>Deceased First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>