force-app/main/default/objects/Lead/fields/Deceased_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Last_Name__c</fullName>
    <label>Deceased Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>