force-app/main/default/objects/Lead/fields/Disable_Welcome_1800A_Email__c.field-meta.xml
<CustomField>
    <fullName>Disable_Welcome_1800A_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Welcome 1800A Email</label>
    <type>Checkbox</type>
</CustomField>