force-app/main/default/objects/Lead/fields/Doing_for_service_today__c.field-meta.xml
<CustomField>
    <fullName>Doing_for_service_today__c</fullName>
    <label>Doing for service today</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I do it myself</fullName>
            </value>
            <value>
                <fullName>I have an Accountant/Bookkeeper/CPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>