force-app/main/default/objects/Lead/fields/Download_1099_URL__c.field-meta.xml
<CustomField>
    <fullName>Download_1099_URL__c</fullName>
    <label>Download 1099 URL</label>
    <type>Url</type>
</CustomField>