force-app/main/default/objects/Lead/fields/EF_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>EF_Scheduled__c</fullName>
    <inlineHelpText>Updating this field will NOT change the event itself. To do that please scroll down to &apos;Activity History&apos;, click on the event you wish to change. Then edit the event and save. However, your changes will NOT be reflected here.</inlineHelpText>
    <label>EF Scheduled</label>
    <type>DateTime</type>
</CustomField>