force-app/main/default/objects/Lead/fields/EF_Scheduled_Local__c.field-meta.xml
<CustomField>
    <fullName>EF_Scheduled_Local__c</fullName>
    <label>EF Scheduled Local</label>
    <length>255</length>
    <type>Text</type>
</CustomField>