force-app/main/default/objects/Lead/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <length>48</length>
    <type>Text</type>
</CustomField>