force-app/main/default/objects/Lead/fields/Email_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_ID__c</fullName>
    <label>Email Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>