force-app/main/default/objects/Lead/fields/Email_Campaign_ID_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_ID_Last_Touch__c</fullName>
    <description>The most recent Email Campaign ID associated with the record</description>
    <label>Email Campaign ID (Last Touch)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>