force-app/main/default/objects/Lead/fields/Equip_Scheduled_Local__c.field-meta.xml
<CustomField>
    <fullName>Equip_Scheduled_Local__c</fullName>
    <label>Equip Scheduled Local</label>
    <length>255</length>
    <type>Text</type>
</CustomField>