force-app/main/default/objects/Lead/fields/Estimated_Business_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Business_Mileage__c</fullName>
    <label>Estimated Business Mileage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estimated_Business_Mileage</valueSetName>
    </valueSet>
</CustomField>