force-app/main/default/objects/Lead/fields/Estimated_First_Year_Profits__c.field-meta.xml
<CustomField>
    <fullName>Estimated_First_Year_Profits__c</fullName>
    <label>Estimated First Year Profits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Tax_Savings</valueSetName>
    </valueSet>
</CustomField>