force-app/main/default/objects/Lead/fields/Event_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_User_ID__c</fullName>
    <label>Event User ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>