force-app/main/default/objects/Lead/fields/EventIDNum__c.field-meta.xml
<CustomField>
    <fullName>EventIDNum__c</fullName>
    <label>EventIDNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>