force-app/main/default/objects/Lead/fields/EZ_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EZ_Order_Number__c</fullName>
    <label>EZ Order Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>