force-app/main/default/objects/Lead/fields/Facebook_handle__c.field-meta.xml
<CustomField>
    <fullName>Facebook_handle__c</fullName>
    <label>Facebook handle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>