force-app/main/default/objects/Lead/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <label>Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Filing_Status</valueSetName>
    </valueSet>
</CustomField>