force-app/main/default/objects/Lead/fields/Full_Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Full_Landing_Page_URL__c</fullName>
    <description>The landing visited by the client page used with Invoca and other tools</description>
    <label>Full Landing Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>