force-app/main/default/objects/Lead/fields/Gambling__c.field-meta.xml
<CustomField>
    <fullName>Gambling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gambling</label>
    <type>Checkbox</type>
</CustomField>