force-app/main/default/objects/Lead/fields/glcid__c.field-meta.xml
<CustomField>
    <fullName>glcid__c</fullName>
    <label>glcid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>