force-app/main/default/objects/Lead/fields/Has_Future_1_1_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Has_Future_1_1_Scheduled__c</fullName>
    <formula>if( datevalue(X1_1_Scheduled__c)&gt;=TODAY(),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Future 1-1 Scheduled?</label>
    <type>Checkbox</type>
</CustomField>