force-app/main/default/objects/Lead/fields/Heywire_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Heywire_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For reporting on text success</description>
    <label>Heywire Tracking</label>
    <type>Checkbox</type>
</CustomField>