force-app/main/default/objects/Lead/fields/Hire_employees_in_12_months__c.field-meta.xml
<CustomField>
    <fullName>Hire_employees_in_12_months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hire employees in 12 months</label>
    <type>Checkbox</type>
</CustomField>