force-app/main/default/objects/Lead/fields/Home_Office_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Square_Feet__c</fullName>
    <label>Home Office Square Feet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Office_Square_Feet</valueSetName>
    </valueSet>
</CustomField>